tests/ui/uninhabited/void-branch.stderr
error: unreachable expression
  --> $DIR/void-branch.rs:33:5
   |
LL |     (x, loop {})
   |     ^^^^-------^
   |     |   |
   |     |   any code following this expression is unreachable
   |     unreachable expression
   |
note: the lint level is defined here
  --> $DIR/void-branch.rs:1:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: unreachable expression
  --> $DIR/void-branch.rs:10:13
   |
LL |             std::mem::uninitialized::<Void>();
   |             --------------------------------- any code following this expression is unreachable
LL |             println!();
   |             ^^^^^^^^^^ unreachable expression
   |
note: this expression has type `Void`, which is uninhabited
  --> $DIR/void-branch.rs:9:13
   |
LL |             std::mem::uninitialized::<Void>();
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unreachable expression
  --> $DIR/void-branch.rs:25:9
   |
LL |         infallible();
   |         ------------ any code following this expression is unreachable
LL |         println!()
   |         ^^^^^^^^^^ unreachable expression
   |
note: this expression has type `Infallible`, which is uninhabited
  --> $DIR/void-branch.rs:24:9
   |
LL |         infallible();
   |         ^^^^^^^^^^^^

error: unreachable expression
  --> $DIR/void-branch.rs:38:48
   |
LL |     if x.len() > 0 { Err(infallible_with_arg(x)) } else { Ok(x) }
   |                          ----------------------^ unreachable expression
   |                          |
   |                          any code following this expression is unreachable
   |
note: this expression has type `(String, Infallible)`, which is uninhabited
  --> $DIR/void-branch.rs:38:26
   |
LL |     if x.len() > 0 { Err(infallible_with_arg(x)) } else { Ok(x) }
   |                          ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

